--- a/package.json
+++ b/package.json
@@ -8,17 +8,14 @@
   },
   "author": "Evyatar Hazan <EvyatarHazan3.14@gmail.com>, Naftali Zeivald <naftali2055@gmail.com>",
   "type": "module",
-  "bin": {
-    "blueprint-react-native-create": "dist/cli.js"
-  },
+  "bin": "dist/cli.js",
   "scripts": {
     "build": "tsc"
   },
   "license": "MIT",
   "dependencies": {
     "@react-native-community/cli": "^18.0.0",
-    "inquirer": "^12.5.2",
-    "react-native": "0.76.5"
+    "inquirer": "^12.5.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
