--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
       "jsx": "react",
       "target": "ES2020",                         // Allows modern JS features like optional chaining
-      "module": "ESNext",                         // Use ES modules (compatible with Node.js + "type": "module")
+      "module": "es2020",                         // Use ES modules (compatible with Node.js + "type": "module")
       "lib": ["ES2020"],                          // Include modern JS standard libraries
       "moduleResolution": "node",                 // Use Node.js-style module resolution
       "resolveJsonModule": true,                  // Allow importing JSON files
@@ -16,6 +16,6 @@
     },
 
     "include": ["src"],
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules", "dist", "src/__features__"]
   }
   
